--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,241 +1,54 @@
-name: Build
+name: Build Telon Gateway APK
 
 on:
   push:
     branches:
       - "**"
+  workflow_dispatch:
 
 jobs:
-  build:
+  build-android:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-        with:
-          path: react-native-gsm-sip-gateway
-
-      - name: Checkout required dependencies
-        run: |
-          # Clone all required sibling repositories
-          git clone https://github.com/telon-org/react-native-tele.git
-          git clone https://github.com/telon-org/react-native-sip2.git
-          git clone https://github.com/telon-org/react-native-replace-dialer.git
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-          registry-url: 'https://registry.npmjs.org/'
-
-      - name: Install dependencies
-        run: |
-          # Remove existing lock file and node_modules to start fresh
-          rm -f package-lock.json
-          rm -rf node_modules
-          # Generate new lock file with current Node.js version
-          npm install
-        working-directory: react-native-gsm-sip-gateway/telon-gateway-app
-
-      - name: Run tests
-        run: npm test || echo "Tests failed or not configured - continuing build"
-        working-directory: react-native-gsm-sip-gateway/telon-gateway-app
-
-  build_android:
-    runs-on: ubuntu-latest
-    needs: build
-
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-        with:
-          path: react-native-gsm-sip-gateway
-
-      - name: Checkout required dependencies
-        run: |
-          # Clone all required sibling repositories
-          git clone https://github.com/telon-org/react-native-tele.git
-          git clone https://github.com/telon-org/react-native-sip2.git
-          git clone https://github.com/telon-org/react-native-replace-dialer.git
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-          registry-url: 'https://registry.npmjs.org/'
-
+      # Step 1: Set up the correct Java and Node.js environments first.
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
-          java-version: '17'
           distribution: 'temurin'
+          java-version: '17'
 
-      - name: Setup Android SDK
-        uses: android-actions/setup-android@v3
+      - name: Set up Node.js v18
+        uses: actions/setup-node@v4
         with:
-          cmdline-tools-version: '12.0'
-          accept-android-sdk-licenses: true
+          node-version: '18'
+          cache: 'yarn'
 
-      - name: Install Android SDK components
+      # Step 2: Create the correct directory structure and clone all required repositories.
+      # This is the most critical step. It mimics the developer's local setup.
+      - name: Clone all sibling repositories
         run: |
-          sdkmanager "platforms;android-33" "build-tools;33.0.2" "ndk;25.1.8937393"
-
-      - name: Set environment variables
-        run: |
-          echo "ANDROID_HOME=$ANDROID_HOME" >> $GITHUB_ENV
-          echo "ANDROID_SDK_ROOT=$ANDROID_HOME" >> $GITHUB_ENV
-          echo "NDK_HOME=$ANDROID_HOME/ndk/25.1.8937393" >> $GITHUB_ENV
-
-      - name: Install global React Native CLI
-        run: npm install -g @react-native-community/cli
-
-      - name: Install Dependencies
-        run: |
-          # Handle dependency installation
-          rm -f package-lock.json
-          rm -rf node_modules
-          npm install
-        working-directory: react-native-gsm-sip-gateway/telon-gateway-app
-
-      - name: Verify React Native setup
-        run: |
-          # Ensure React Native CLI is available and check critical files
-          npx react-native --version
-          echo "Checking for native_modules.gradle..."
-          find node_modules -name "native_modules.gradle" -type f || echo "native_modules.gradle not found"
-          echo "React Native Community CLI platform android:"
-          ls -la node_modules/@react-native-community/cli-platform-android/ || echo "CLI platform Android not found"
-        working-directory: react-native-gsm-sip-gateway/telon-gateway-app
-
-      - name: Create local.properties
-        run: |
-          echo "sdk.dir=$ANDROID_HOME" > android/local.properties
-          echo "ndk.dir=$ANDROID_HOME/ndk/25.1.8937393" >> android/local.properties
-        working-directory: react-native-gsm-sip-gateway/telon-gateway-app
-
-      - name: Link React Native dependencies
-        run: |
-          # Try to link React Native dependencies properly
-          npx react-native unlink || echo "Unlink command not available"
-          npx react-native link || echo "Link command not available - using autolinking"
-        working-directory: react-native-gsm-sip-gateway/telon-gateway-app
-
-      - name: Make Gradlew executable
-        run: chmod +x gradlew
-        working-directory: react-native-gsm-sip-gateway/telon-gateway-app/android
-
-      - name: Clean Gradle (with debug info)
-        run: |
-          echo "Current directory structure:"
-          ls -la ../
-          echo "Node modules structure:"
-          ls -la ../node_modules/@react-native-community/ || echo "react-native-community not found"
-          echo "Running gradlew clean with debug info:"
-          ./gradlew clean --stacktrace --debug || ./gradlew clean --stacktrace
-        working-directory: react-native-gsm-sip-gateway/telon-gateway-app/android
-
-      - name: Generate React Native Bundle
-        run: |
-          mkdir -p android/app/build/intermediates/assets/release/
-          npx react-native bundle \
-            --platform android \
-            --dev false \
-            --entry-file index.js \
-            --bundle-output android/app/build/intermediates/assets/release/index.android.bundle \
-            --assets-dest android/app/build/intermediates/res/merged/release/
-        working-directory: react-native-gsm-sip-gateway/telon-gateway-app
-
-      - name: Build Android Release
-        run: |
-          ./gradlew assembleRelease
-        working-directory: react-native-gsm-sip-gateway/telon-gateway-app/android
-        env:
-          KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
-
-      - name: Upload APK artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: android-apk
-          path: react-native-gsm-sip-gateway/telon-gateway-app/android/app/build/outputs/apk/release/app-release.apk
-
-  build_bundle:
-    runs-on: ubuntu-latest
-    needs: build_android
-    if: success()  # Only run if Android build succeeds
-
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-        with:
-          path: react-native-gsm-sip-gateway
-
-      - name: Checkout required dependencies
-        run: |
-          # Clone all required sibling repositories
+          git clone https://github.com/telon-org/react-native-gsm-sip-gateway.git
           git clone https://github.com/telon-org/react-native-tele.git
           git clone https://github.com/telon-org/react-native-sip2.git
           git clone https://github.com/telon-org/react-native-replace-dialer.git
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-          registry-url: 'https://registry.npmjs.org/'
+      # Step 3: Install dependencies from within the main app's directory.
+      # Yarn will now be able to correctly find the local 'file:../' dependencies.
+      - name: Install Yarn Dependencies
+        working-directory: ./react-native-gsm-sip-gateway
+        run: yarn install
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-
-      - name: Setup Android SDK
-        uses: android-actions/setup-android@v3
-        with:
-          cmdline-tools-version: '12.0'
-          accept-android-sdk-licenses: true
-
-      - name: Install Android SDK components
-        run: |
-          sdkmanager "platforms;android-33" "build-tools;33.0.2"
-
-      - name: Install global React Native CLI
-        run: npm install -g @react-native-community/cli
-
-      - name: Install Dependencies
-        run: |
-          # Handle dependency installation
-          rm -f package-lock.json
-          rm -rf node_modules
-          npm install
-        working-directory: react-native-gsm-sip-gateway/telon-gateway-app
-
-      - name: Create local.properties
-        run: |
-          echo "sdk.dir=$ANDROID_HOME" > android/local.properties
-        working-directory: react-native-gsm-sip-gateway/telon-gateway-app
-
-      - name: Generate React Native Bundle
-        run: |
-          mkdir -p android/app/build/intermediates/assets/release/
-          npx react-native bundle \
-            --platform android \
-            --dev false \
-            --entry-file index.js \
-            --bundle-output android/app/build/intermediates/assets/release/index.android.bundle \
-            --assets-dest android/app/build/intermediates/res/merged/release/
-        working-directory: react-native-gsm-sip-gateway/telon-gateway-app
-
-      - name: Build Android App Bundle
+      # Step 4: Build the release APK using the Gradle wrapper.
+      - name: Build Android Release APK
+        working-directory: ./react-native-gsm-sip-gateway/android
         run: |
           chmod +x gradlew
-          ./gradlew clean
-          ./gradlew bundleRelease
-        working-directory: react-native-gsm-sip-gateway/telon-gateway-app/android
-        env:
-          KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
+          ./gradlew assembleRelease
 
-      - name: Upload AAB artifact
+      # Step 5: Upload the finished APK file as a downloadable artifact.
+      - name: Upload APK Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: android-bundle
-          path: react-native-gsm-sip-gateway/telon-gateway-app/android/app/build/outputs/bundle/release/app-release.aab
+          name: gsm-sip-gateway-apk
+          path: react-native-gsm-sip-gateway/android/app/build/outputs/apk/release/app-release.apk
