--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,6 @@ jobs:
       - name: Run tests
         run: npm test || echo "Tests failed or not configured - continuing build"
         working-directory: react-native-gsm-sip-gateway/telon-gateway-app
-
   build_android:
     runs-on: ubuntu-latest
     needs: build
@@ -49,15 +48,13 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
         with:
-          # Check out the main repo into a folder named react-native-gsm-sip-gateway
           path: react-native-gsm-sip-gateway
 
       - name: Checkout required dependencies
-        # Set the working directory to the main repo folder
+        # THIS IS THE CRITICAL FIX
         working-directory: react-native-gsm-sip-gateway
         run: |
-          # Now, clone the dependencies inside the main repo folder
-          # This makes them available at ../react-native-tele from the app folder
+          # Clone all required sibling repositories
           git clone https://github.com/telon-org/react-native-tele.git
           git clone https://github.com/telon-org/react-native-sip2.git
           git clone https://github.com/telon-org/react-native-replace-dialer.git
@@ -74,14 +71,15 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
-      # ... (The rest of your steps remain the same) ...
-
       - name: Install Dependencies
         run: npm install
-        # This working-directory is now correct because the dependencies are in the right place
         working-directory: react-native-gsm-sip-gateway/telon-gateway-app
 
-      # ... (The rest of your android build steps) ...
+      - name: Create local.properties
+        run: |
+          echo "sdk.dir=$ANDROID_HOME" > android/local.properties
+        working-directory: react-native-gsm-sip-gateway/telon-gateway-app
+
       - name: Make Gradlew executable
         run: chmod +x gradlew
         working-directory: react-native-gsm-sip-gateway/telon-gateway-app/android
@@ -97,7 +95,6 @@ jobs:
         with:
           name: android-apk
           path: react-native-gsm-sip-gateway/telon-gateway-app/android/app/build/outputs/apk/release/app-release.apk
-
 
   
   build_bundle:
