--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,116 +1,29 @@
-name: Build
+# A corrected and streamlined GitHub Actions workflow for building the React Native Android app.
+
+name: Build Android
 
 on:
   push:
     branches:
-      - "**"
+      - "**" # This runs the workflow on pushes to any branch
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-        with:
-          path: react-native-gsm-sip-gateway
-
-      - name: Checkout required dependencies
-        run: |
-          # Clone all required sibling repositories
-          git clone https://github.com/telon-org/react-native-tele.git
-          git clone https://github.com/telon-org/react-native-sip2.git
-          git clone https://github.com/telon-org/react-native-replace-dialer.git
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-          registry-url: 'https://registry.npmjs.org/'
-
-      - name: Install dependencies
-        run: |
-          # Remove existing lock file and node_modules to start fresh
-          rm -f package-lock.json
-          rm -rf node_modules
-          # Generate new lock file with current Node.js version
-          npm install
-        working-directory: react-native-gsm-sip-gateway/telon-gateway-app
-
-      - name: Run tests
-        run: npm test || echo "Tests failed or not configured - continuing build"
-        working-directory: react-native-gsm-sip-gateway/telon-gateway-app
   build_android:
+    name: Build Android APK
     runs-on: ubuntu-latest
-    needs: build
 
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
         with:
+          # Checks out your main repo into this specific folder
           path: react-native-gsm-sip-gateway
 
       - name: Checkout required dependencies
-        # THIS IS THE CRITICAL FIX
+        # FIX #1: This step now runs INSIDE the main repo folder, placing the
+        # dependencies where your package.json expects them (../)
         working-directory: react-native-gsm-sip-gateway
         run: |
-          # Clone all required sibling repositories
-          git clone https://github.com/telon-org/react-native-tele.git
-          git clone https://github.com/telon-org/react-native-sip2.git
-          git clone https://github.com/telon-org/react-native-replace-dialer.git
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-          registry-url: 'https://registry.npmjs.org/'
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-
-      - name: Install Dependencies
-        run: npm install
-        working-directory: react-native-gsm-sip-gateway/telon-gateway-app
-
-      - name: Create local.properties
-        run: |
-          echo "sdk.dir=$ANDROID_HOME" > android/local.properties
-        working-directory: react-native-gsm-sip-gateway/telon-gateway-app
-
-      - name: Make Gradlew executable
-        run: chmod +x gradlew
-        working-directory: react-native-gsm-sip-gateway/telon-gateway-app/android
-
-      - name: Clean and Build Android
-        run: ./gradlew clean assembleRelease
-        working-directory: react-native-gsm-sip-gateway/telon-gateway-app/android
-        env:
-          KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
-
-      - name: Upload APK artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: android-apk
-          path: react-native-gsm-sip-gateway/telon-gateway-app/android/app/build/outputs/apk/release/app-release.apk
-
-  
-  build_bundle:
-    runs-on: ubuntu-latest
-    needs: build_android
-    if: success()  # Only run if Android build succeeds
-
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-        with:
-          path: react-native-gsm-sip-gateway
-
-      - name: Checkout required dependencies
-        run: |
-          # Clone all required sibling repositories
           git clone https://github.com/telon-org/react-native-tele.git
           git clone https://github.com/telon-org/react-native-sip2.git
           git clone https://github.com/telon-org/react-native-replace-dialer.git
@@ -129,46 +42,84 @@ jobs:
 
       - name: Setup Android SDK
         uses: android-actions/setup-android@v3
-        with:
-          cmdline-tools-version: '12.0'
-          accept-android-sdk-licenses: true
-
-      - name: Install Android SDK components
-        run: |
-          sdkmanager "platforms;android-33" "build-tools;33.0.2"
-
-      - name: Install global React Native CLI
-        run: npm install -g @react-native-community/cli
 
       - name: Install Dependencies
-        run: |
-          # Handle dependency installation
-          rm -f package-lock.json
-          rm -rf node_modules
-          npm install
+        # FIX #2: Using --legacy-peer-deps to solve the dependency conflict
+        # between React 17 (required by a dependency) and React 18 (in your project).
+        run: npm install --legacy-peer-deps
         working-directory: react-native-gsm-sip-gateway/telon-gateway-app
 
       - name: Create local.properties
-        run: |
-          echo "sdk.dir=$ANDROID_HOME" > android/local.properties
+        run: echo "sdk.dir=$ANDROID_HOME" > android/local.properties
         working-directory: react-native-gsm-sip-gateway/telon-gateway-app
 
-      - name: Generate React Native Bundle
+      - name: Make Gradlew executable
+        run: chmod +x gradlew
+        working-directory: react-native-gsm-sip-gateway/telon-gateway-app/android
+
+      - name: Clean and Build Android APK
+        run: ./gradlew clean assembleRelease
+        working-directory: react-native-gsm-sip-gateway/telon-gateway-app/android
+        env:
+          # Ensure you have this secret set in your repository's Settings > Secrets and variables > Actions
+          KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
+
+      - name: Upload APK artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: android-apk
+          path: react-native-gsm-sip-gateway/telon-gateway-app/android/app/build/outputs/apk/release/app-release.apk
+
+  build_bundle:
+    name: Build Android App Bundle (AAB)
+    runs-on: ubuntu-latest
+    needs: build_android # This job will only run if the build_android job succeeds
+    if: success()
+
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+        with:
+          path: react-native-gsm-sip-gateway
+
+      - name: Checkout required dependencies
+        # FIX #1 is also applied here for consistency
+        working-directory: react-native-gsm-sip-gateway
         run: |
-          mkdir -p android/app/build/intermediates/assets/release/
-          npx react-native bundle \
-            --platform android \
-            --dev false \
-            --entry-file index.js \
-            --bundle-output android/app/build/intermediates/assets/release/index.android.bundle \
-            --assets-dest android/app/build/intermediates/res/merged/release/
+          git clone https://github.com/telon-org/react-native-tele.git
+          git clone https://github.com/telon-org/react-native-sip2.git
+          git clone https://github.com/telon-org/react-native-replace-dialer.git
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+          registry-url: 'https://registry.npmjs.org/'
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+
+      - name: Setup Android SDK
+        uses: android-actions/setup-android@v3
+
+      - name: Install Dependencies
+        # FIX #2 is also applied here for consistency
+        run: npm install --legacy-peer-deps
         working-directory: react-native-gsm-sip-gateway/telon-gateway-app
+
+      - name: Create local.properties
+        run: echo "sdk.dir=$ANDROID_HOME" > android/local.properties
+        working-directory: react-native-gsm-sip-gateway/telon-gateway-app
+
+      - name: Make Gradlew executable
+        run: chmod +x gradlew
+        working-directory: react-native-gsm-sip-gateway/telon-gateway-app/android
 
       - name: Build Android App Bundle
-        run: |
-          chmod +x gradlew
-          ./gradlew clean
-          ./gradlew bundleRelease
+        run: ./gradlew clean bundleRelease
         working-directory: react-native-gsm-sip-gateway/telon-gateway-app/android
         env:
           KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
