--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,15 +1,16 @@
-# A corrected and streamlined GitHub Actions workflow for building the React Native Android app.
+# A completely revised and robust workflow for building the Android app.
+# This version uses a single job to ensure the environment is consistent.
 
-name: Build Android
+name: Build Android APK and AAB
 
 on:
   push:
     branches:
-      - "**" # This runs the workflow on pushes to any branch
+      - "**" # Runs on any push to any branch
 
 jobs:
   build_android:
-    name: Build Android APK
+    name: Build Android Release Artifacts
     runs-on: ubuntu-latest
 
     steps:
@@ -20,8 +21,7 @@ jobs:
           path: react-native-gsm-sip-gateway
 
       - name: Checkout required dependencies
-        # FIX #1: This step now runs INSIDE the main repo folder, placing the
-        # dependencies where your package.json expects them (../)
+        # This step correctly runs inside the main repo folder
         working-directory: react-native-gsm-sip-gateway
         run: |
           git clone https://github.com/telon-org/react-native-tele.git
@@ -44,8 +44,8 @@ jobs:
         uses: android-actions/setup-android@v3
 
       - name: Install Dependencies
-        # FIX #2: Using --legacy-peer-deps to solve the dependency conflict
-        # between React 17 (required by a dependency) and React 18 (in your project).
+        # THIS IS THE CRITICAL FIX: Using --legacy-peer-deps to solve the
+        # dependency conflict which was causing npm install to fail.
         run: npm install --legacy-peer-deps
         working-directory: react-native-gsm-sip-gateway/telon-gateway-app
 
@@ -57,11 +57,10 @@ jobs:
         run: chmod +x gradlew
         working-directory: react-native-gsm-sip-gateway/telon-gateway-app/android
 
-      - name: Clean and Build Android APK
-        run: ./gradlew clean assembleRelease
+      - name: Build Android APK
+        run: ./gradlew assembleRelease
         working-directory: react-native-gsm-sip-gateway/telon-gateway-app/android
         env:
-          # Ensure you have this secret set in your repository's Settings > Secrets and variables > Actions
           KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
 
       - name: Upload APK artifact
@@ -70,56 +69,8 @@ jobs:
           name: android-apk
           path: react-native-gsm-sip-gateway/telon-gateway-app/android/app/build/outputs/apk/release/app-release.apk
 
-  build_bundle:
-    name: Build Android App Bundle (AAB)
-    runs-on: ubuntu-latest
-    needs: build_android # This job will only run if the build_android job succeeds
-    if: success()
-
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-        with:
-          path: react-native-gsm-sip-gateway
-
-      - name: Checkout required dependencies
-        # FIX #1 is also applied here for consistency
-        working-directory: react-native-gsm-sip-gateway
-        run: |
-          git clone https://github.com/telon-org/react-native-tele.git
-          git clone https://github.com/telon-org/react-native-sip2.git
-          git clone https://github.com/telon-org/react-native-replace-dialer.git
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-          registry-url: 'https://registry.npmjs.org/'
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-
-      - name: Setup Android SDK
-        uses: android-actions/setup-android@v3
-
-      - name: Install Dependencies
-        # FIX #2 is also applied here for consistency
-        run: npm install --legacy-peer-deps
-        working-directory: react-native-gsm-sip-gateway/telon-gateway-app
-
-      - name: Create local.properties
-        run: echo "sdk.dir=$ANDROID_HOME" > android/local.properties
-        working-directory: react-native-gsm-sip-gateway/telon-gateway-app
-
-      - name: Make Gradlew executable
-        run: chmod +x gradlew
-        working-directory: react-native-gsm-sip-gateway/telon-gateway-app/android
-
-      - name: Build Android App Bundle
-        run: ./gradlew clean bundleRelease
+      - name: Build Android App Bundle (AAB)
+        run: ./gradlew bundleRelease
         working-directory: react-native-gsm-sip-gateway/telon-gateway-app/android
         env:
           KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
